Fix mark all done on mobile

--- a/app.styl
+++ b/app.styl
@@ -43,14 +43,14 @@ body
   border-top-right-radius 6px
   border-bottom 1px solid #ccc
 
-  #mark-all-done
-    float right
-    margin-top -17px
-    font-size font-xsmall
-    color light-gray
+#mark-all-done
+  float right
+  margin-top -17px
+  font-size font-xsmall
+  color light-gray
 
-    &:hover
-      color gray
+  &:hover
+    color gray
 
 h1
   margin 0px
@@ -163,6 +163,9 @@ input[type='text']
 
   #todo-submit
     margin-top 10px
+
+  #mark-all-done
+    float none
 
 @media (-webkit-min-device-pixel-ratio: 1.25), (min-resolution: 120dpi)
   body
